Change the way params are passed
Former-commit-id: 50b513325d9723796e9a855ed65a843a931cfb7d
